tools/parser.output
Terminals unused in grammar

    TOKEN_ERROR


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl decl_list
    3          | ε

    4 decl: TOKEN_ID TOKEN_DPOINTS type TOKEN_SEMI
    5     | TOKEN_ID TOKEN_DPOINTS type TOKEN_ASSIGN expr TOKEN_SEMI
    6     | TOKEN_ID TOKEN_DPOINTS TOKEN_FUNCTION type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_ASSIGN stmt_block

    7 type: TOKEN_VOID
    8     | TOKEN_INT_TYPE
    9     | TOKEN_BOOLEAN_TYPE
   10     | TOKEN_STRING_TYPE

   11 param_list: ε
   12           | param_decl
   13           | param_list TOKEN_COMMA param_decl

   14 param_decl: TOKEN_ID TOKEN_DPOINTS type

   15 stmt: TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN normal_stmt
   16     | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN normal_stmt TOKEN_ELSE normal_stmt
   17     | normal_stmt

   18 normal_stmt: TOKEN_WHILE TOKEN_LPAREN expr TOKEN_RPAREN stmt
   19            | TOKEN_FOR TOKEN_LPAREN for_assignment TOKEN_SEMI expr TOKEN_SEMI assignment TOKEN_RPAREN stmt
   20            | TOKEN_PRINT call_args TOKEN_SEMI
   21            | TOKEN_RETURN expr TOKEN_SEMI
   22            | assignment TOKEN_SEMI
   23            | stmt_block

   24 stmt_block: TOKEN_LBRACE stmt_list TOKEN_RBRACE

   25 stmt_list: ε
   26          | stmt_list stmt
   27          | stmt_list decl

   28 for_assignment: assignment
   29               | ε

   30 assignment: TOKEN_ID TOKEN_ASSIGN expr
   31           | TOKEN_ID TOKEN_INCREMENT
   32           | TOKEN_ID TOKEN_DECREMENT

   33 expr: expr TOKEN_PLUS term
   34     | expr TOKEN_MINUS term
   35     | cond
   36     | term

   37 cond: expr TOKEN_EQ term
   38     | expr TOKEN_NEQ term
   39     | expr TOKEN_LT term
   40     | expr TOKEN_GT term
   41     | expr TOKEN_LEQ term
   42     | expr TOKEN_GEQ term

   43 term: term TOKEN_MUL factor
   44     | term TOKEN_DIV factor
   45     | factor
   46     | call

   47 call: TOKEN_ID TOKEN_LPAREN call_args TOKEN_RPAREN

   48 call_args: ε
   49          | expr
   50          | call_args TOKEN_COMMA expr

   51 factor: TOKEN_MINUS factor
   52       | TOKEN_LPAREN expr TOKEN_RPAREN
   53       | TOKEN_TRUE
   54       | TOKEN_FALSE
   55       | TOKEN_STRING_LITERAL
   56       | TOKEN_INT
   57       | TOKEN_ID


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_ID <expr_id> (258) 4 5 6 14 30 31 32 47 57
    TOKEN_STRING_LITERAL <string_literal> (259) 55
    TOKEN_INT <expr_ptr> (260) 56
    TOKEN_PLUS <expr_ptr> (261) 33
    TOKEN_MINUS <expr_ptr> (262) 34 51
    TOKEN_MUL <expr_ptr> (263) 43
    TOKEN_DIV <expr_ptr> (264) 44
    TOKEN_SEMI <expr_ptr> (265) 4 5 19 20 21 22
    TOKEN_LPAREN <expr_ptr> (266) 6 15 16 18 19 47 52
    TOKEN_RPAREN <expr_ptr> (267) 6 15 16 18 19 47 52
    TOKEN_ASSIGN <expr_ptr> (268) 5 6 30
    TOKEN_ERROR <expr_ptr> (269)
    TOKEN_IF (270) 15 16
    TOKEN_WHILE (271) 18
    TOKEN_PRINT (272) 20
    TOKEN_RETURN (273) 21
    TOKEN_LBRACE (274) 24
    TOKEN_RBRACE (275) 24
    TOKEN_COMMA (276) 13 50
    TOKEN_VOID (277) 7
    TOKEN_INT_TYPE (278) 8
    TOKEN_BOOLEAN_TYPE (279) 9
    TOKEN_STRING_TYPE (280) 10
    TOKEN_FOR (281) 19
    TOKEN_FUNCTION (282) 6
    TOKEN_DPOINTS (283) 4 5 6 14
    TOKEN_INCREMENT (284) 31
    TOKEN_DECREMENT (285) 32
    TOKEN_EQ (286) 37
    TOKEN_NEQ (287) 38
    TOKEN_LT (288) 39
    TOKEN_GT (289) 40
    TOKEN_LEQ (290) 41
    TOKEN_GEQ (291) 42
    TOKEN_TRUE (292) 53
    TOKEN_FALSE (293) 54
    "then" (294)
    TOKEN_ELSE (295) 16


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    program <decl> (42)
        on left: 1
        on right: 0
    decl_list <decl> (43)
        on left: 2 3
        on right: 1 2
    decl <decl> (44)
        on left: 4 5 6
        on right: 2 27
    type <type> (45)
        on left: 7 8 9 10
        on right: 4 5 6 14
    param_list <param> (46)
        on left: 11 12 13
        on right: 6 13
    param_decl <param> (47)
        on left: 14
        on right: 12 13
    stmt <stmt> (48)
        on left: 15 16 17
        on right: 18 19 26
    normal_stmt <stmt> (49)
        on left: 18 19 20 21 22 23
        on right: 15 16 17
    stmt_block <stmt> (50)
        on left: 24
        on right: 6 23
    stmt_list <stmt> (51)
        on left: 25 26 27
        on right: 24 26 27
    for_assignment <expr_ptr> (52)
        on left: 28 29
        on right: 19
    assignment <expr_ptr> (53)
        on left: 30 31 32
        on right: 19 22 28
    expr <expr_ptr> (54)
        on left: 33 34 35 36
        on right: 5 15 16 18 19 21 30 33 34 37 38 39 40 41 42 49 50 52
    cond <expr_ptr> (55)
        on left: 37 38 39 40 41 42
        on right: 35
    term <expr_ptr> (56)
        on left: 43 44 45 46
        on right: 33 34 36 37 38 39 40 41 42 43 44
    call <expr_ptr> (57)
        on left: 47
        on right: 46
    call_args <expr_ptr> (58)
        on left: 48 49 50
        on right: 20 47 50
    factor <expr_ptr> (59)
        on left: 51 52 53 54 55 56 57
        on right: 43 44 45 51


State 0

    0 $accept: • program $end

    TOKEN_ID  shift, and go to state 1

    $default  reduce using rule 3 (decl_list)

    program    go to state 2
    decl_list  go to state 3
    decl       go to state 4


State 1

    4 decl: TOKEN_ID • TOKEN_DPOINTS type TOKEN_SEMI
    5     | TOKEN_ID • TOKEN_DPOINTS type TOKEN_ASSIGN expr TOKEN_SEMI
    6     | TOKEN_ID • TOKEN_DPOINTS TOKEN_FUNCTION type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_ASSIGN stmt_block

    TOKEN_DPOINTS  shift, and go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: decl_list •

    $default  reduce using rule 1 (program)


State 4

    2 decl_list: decl • decl_list

    TOKEN_ID  shift, and go to state 1

    $default  reduce using rule 3 (decl_list)

    decl_list  go to state 7
    decl       go to state 4


State 5

    4 decl: TOKEN_ID TOKEN_DPOINTS • type TOKEN_SEMI
    5     | TOKEN_ID TOKEN_DPOINTS • type TOKEN_ASSIGN expr TOKEN_SEMI
    6     | TOKEN_ID TOKEN_DPOINTS • TOKEN_FUNCTION type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_ASSIGN stmt_block

    TOKEN_VOID          shift, and go to state 8
    TOKEN_INT_TYPE      shift, and go to state 9
    TOKEN_BOOLEAN_TYPE  shift, and go to state 10
    TOKEN_STRING_TYPE   shift, and go to state 11
    TOKEN_FUNCTION      shift, and go to state 12

    type  go to state 13


State 6

    0 $accept: program $end •

    $default  accept


State 7

    2 decl_list: decl decl_list •

    $default  reduce using rule 2 (decl_list)


State 8

    7 type: TOKEN_VOID •

    $default  reduce using rule 7 (type)


State 9

    8 type: TOKEN_INT_TYPE •

    $default  reduce using rule 8 (type)


State 10

    9 type: TOKEN_BOOLEAN_TYPE •

    $default  reduce using rule 9 (type)


State 11

   10 type: TOKEN_STRING_TYPE •

    $default  reduce using rule 10 (type)


State 12

    6 decl: TOKEN_ID TOKEN_DPOINTS TOKEN_FUNCTION • type TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_ASSIGN stmt_block

    TOKEN_VOID          shift, and go to state 8
    TOKEN_INT_TYPE      shift, and go to state 9
    TOKEN_BOOLEAN_TYPE  shift, and go to state 10
    TOKEN_STRING_TYPE   shift, and go to state 11

    type  go to state 14


State 13

    4 decl: TOKEN_ID TOKEN_DPOINTS type • TOKEN_SEMI
    5     | TOKEN_ID TOKEN_DPOINTS type • TOKEN_ASSIGN expr TOKEN_SEMI

    TOKEN_SEMI    shift, and go to state 15
    TOKEN_ASSIGN  shift, and go to state 16


State 14

    6 decl: TOKEN_ID TOKEN_DPOINTS TOKEN_FUNCTION type • TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_ASSIGN stmt_block

    TOKEN_LPAREN  shift, and go to state 17


State 15

    4 decl: TOKEN_ID TOKEN_DPOINTS type TOKEN_SEMI •

    $default  reduce using rule 4 (decl)


State 16

    5 decl: TOKEN_ID TOKEN_DPOINTS type TOKEN_ASSIGN • expr TOKEN_SEMI

    TOKEN_ID              shift, and go to state 18
    TOKEN_STRING_LITERAL  shift, and go to state 19
    TOKEN_INT             shift, and go to state 20
    TOKEN_MINUS           shift, and go to state 21
    TOKEN_LPAREN          shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_FALSE           shift, and go to state 24

    expr    go to state 25
    cond    go to state 26
    term    go to state 27
    call    go to state 28
    factor  go to state 29


State 17

    6 decl: TOKEN_ID TOKEN_DPOINTS TOKEN_FUNCTION type TOKEN_LPAREN • param_list TOKEN_RPAREN TOKEN_ASSIGN stmt_block

    TOKEN_ID  shift, and go to state 30

    $default  reduce using rule 11 (param_list)

    param_list  go to state 31
    param_decl  go to state 32


State 18

   47 call: TOKEN_ID • TOKEN_LPAREN call_args TOKEN_RPAREN
   57 factor: TOKEN_ID •

    TOKEN_LPAREN  shift, and go to state 33

    $default  reduce using rule 57 (factor)


State 19

   55 factor: TOKEN_STRING_LITERAL •

    $default  reduce using rule 55 (factor)


State 20

   56 factor: TOKEN_INT •

    $default  reduce using rule 56 (factor)


State 21

   51 factor: TOKEN_MINUS • factor

    TOKEN_ID              shift, and go to state 34
    TOKEN_STRING_LITERAL  shift, and go to state 19
    TOKEN_INT             shift, and go to state 20
    TOKEN_MINUS           shift, and go to state 21
    TOKEN_LPAREN          shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_FALSE           shift, and go to state 24

    factor  go to state 35


State 22

   52 factor: TOKEN_LPAREN • expr TOKEN_RPAREN

    TOKEN_ID              shift, and go to state 18
    TOKEN_STRING_LITERAL  shift, and go to state 19
    TOKEN_INT             shift, and go to state 20
    TOKEN_MINUS           shift, and go to state 21
    TOKEN_LPAREN          shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_FALSE           shift, and go to state 24

    expr    go to state 36
    cond    go to state 26
    term    go to state 27
    call    go to state 28
    factor  go to state 29


State 23

   53 factor: TOKEN_TRUE •

    $default  reduce using rule 53 (factor)


State 24

   54 factor: TOKEN_FALSE •

    $default  reduce using rule 54 (factor)


State 25

    5 decl: TOKEN_ID TOKEN_DPOINTS type TOKEN_ASSIGN expr • TOKEN_SEMI
   33 expr: expr • TOKEN_PLUS term
   34     | expr • TOKEN_MINUS term
   37 cond: expr • TOKEN_EQ term
   38     | expr • TOKEN_NEQ term
   39     | expr • TOKEN_LT term
   40     | expr • TOKEN_GT term
   41     | expr • TOKEN_LEQ term
   42     | expr • TOKEN_GEQ term

    TOKEN_PLUS   shift, and go to state 37
    TOKEN_MINUS  shift, and go to state 38
    TOKEN_SEMI   shift, and go to state 39
    TOKEN_EQ     shift, and go to state 40
    TOKEN_NEQ    shift, and go to state 41
    TOKEN_LT     shift, and go to state 42
    TOKEN_GT     shift, and go to state 43
    TOKEN_LEQ    shift, and go to state 44
    TOKEN_GEQ    shift, and go to state 45


State 26

   35 expr: cond •

    $default  reduce using rule 35 (expr)


State 27

   36 expr: term •
   43 term: term • TOKEN_MUL factor
   44     | term • TOKEN_DIV factor

    TOKEN_MUL  shift, and go to state 46
    TOKEN_DIV  shift, and go to state 47

    $default  reduce using rule 36 (expr)


State 28

   46 term: call •

    $default  reduce using rule 46 (term)


State 29

   45 term: factor •

    $default  reduce using rule 45 (term)


State 30

   14 param_decl: TOKEN_ID • TOKEN_DPOINTS type

    TOKEN_DPOINTS  shift, and go to state 48


State 31

    6 decl: TOKEN_ID TOKEN_DPOINTS TOKEN_FUNCTION type TOKEN_LPAREN param_list • TOKEN_RPAREN TOKEN_ASSIGN stmt_block
   13 param_list: param_list • TOKEN_COMMA param_decl

    TOKEN_RPAREN  shift, and go to state 49
    TOKEN_COMMA   shift, and go to state 50


State 32

   12 param_list: param_decl •

    $default  reduce using rule 12 (param_list)


State 33

   47 call: TOKEN_ID TOKEN_LPAREN • call_args TOKEN_RPAREN

    TOKEN_ID              shift, and go to state 18
    TOKEN_STRING_LITERAL  shift, and go to state 19
    TOKEN_INT             shift, and go to state 20
    TOKEN_MINUS           shift, and go to state 21
    TOKEN_LPAREN          shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_FALSE           shift, and go to state 24

    $default  reduce using rule 48 (call_args)

    expr       go to state 51
    cond       go to state 26
    term       go to state 27
    call       go to state 28
    call_args  go to state 52
    factor     go to state 29


State 34

   57 factor: TOKEN_ID •

    $default  reduce using rule 57 (factor)


State 35

   51 factor: TOKEN_MINUS factor •

    $default  reduce using rule 51 (factor)


State 36

   33 expr: expr • TOKEN_PLUS term
   34     | expr • TOKEN_MINUS term
   37 cond: expr • TOKEN_EQ term
   38     | expr • TOKEN_NEQ term
   39     | expr • TOKEN_LT term
   40     | expr • TOKEN_GT term
   41     | expr • TOKEN_LEQ term
   42     | expr • TOKEN_GEQ term
   52 factor: TOKEN_LPAREN expr • TOKEN_RPAREN

    TOKEN_PLUS    shift, and go to state 37
    TOKEN_MINUS   shift, and go to state 38
    TOKEN_RPAREN  shift, and go to state 53
    TOKEN_EQ      shift, and go to state 40
    TOKEN_NEQ     shift, and go to state 41
    TOKEN_LT      shift, and go to state 42
    TOKEN_GT      shift, and go to state 43
    TOKEN_LEQ     shift, and go to state 44
    TOKEN_GEQ     shift, and go to state 45


State 37

   33 expr: expr TOKEN_PLUS • term

    TOKEN_ID              shift, and go to state 18
    TOKEN_STRING_LITERAL  shift, and go to state 19
    TOKEN_INT             shift, and go to state 20
    TOKEN_MINUS           shift, and go to state 21
    TOKEN_LPAREN          shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_FALSE           shift, and go to state 24

    term    go to state 54
    call    go to state 28
    factor  go to state 29


State 38

   34 expr: expr TOKEN_MINUS • term

    TOKEN_ID              shift, and go to state 18
    TOKEN_STRING_LITERAL  shift, and go to state 19
    TOKEN_INT             shift, and go to state 20
    TOKEN_MINUS           shift, and go to state 21
    TOKEN_LPAREN          shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_FALSE           shift, and go to state 24

    term    go to state 55
    call    go to state 28
    factor  go to state 29


State 39

    5 decl: TOKEN_ID TOKEN_DPOINTS type TOKEN_ASSIGN expr TOKEN_SEMI •

    $default  reduce using rule 5 (decl)


State 40

   37 cond: expr TOKEN_EQ • term

    TOKEN_ID              shift, and go to state 18
    TOKEN_STRING_LITERAL  shift, and go to state 19
    TOKEN_INT             shift, and go to state 20
    TOKEN_MINUS           shift, and go to state 21
    TOKEN_LPAREN          shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_FALSE           shift, and go to state 24

    term    go to state 56
    call    go to state 28
    factor  go to state 29


State 41

   38 cond: expr TOKEN_NEQ • term

    TOKEN_ID              shift, and go to state 18
    TOKEN_STRING_LITERAL  shift, and go to state 19
    TOKEN_INT             shift, and go to state 20
    TOKEN_MINUS           shift, and go to state 21
    TOKEN_LPAREN          shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_FALSE           shift, and go to state 24

    term    go to state 57
    call    go to state 28
    factor  go to state 29


State 42

   39 cond: expr TOKEN_LT • term

    TOKEN_ID              shift, and go to state 18
    TOKEN_STRING_LITERAL  shift, and go to state 19
    TOKEN_INT             shift, and go to state 20
    TOKEN_MINUS           shift, and go to state 21
    TOKEN_LPAREN          shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_FALSE           shift, and go to state 24

    term    go to state 58
    call    go to state 28
    factor  go to state 29


State 43

   40 cond: expr TOKEN_GT • term

    TOKEN_ID              shift, and go to state 18
    TOKEN_STRING_LITERAL  shift, and go to state 19
    TOKEN_INT             shift, and go to state 20
    TOKEN_MINUS           shift, and go to state 21
    TOKEN_LPAREN          shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_FALSE           shift, and go to state 24

    term    go to state 59
    call    go to state 28
    factor  go to state 29


State 44

   41 cond: expr TOKEN_LEQ • term

    TOKEN_ID              shift, and go to state 18
    TOKEN_STRING_LITERAL  shift, and go to state 19
    TOKEN_INT             shift, and go to state 20
    TOKEN_MINUS           shift, and go to state 21
    TOKEN_LPAREN          shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_FALSE           shift, and go to state 24

    term    go to state 60
    call    go to state 28
    factor  go to state 29


State 45

   42 cond: expr TOKEN_GEQ • term

    TOKEN_ID              shift, and go to state 18
    TOKEN_STRING_LITERAL  shift, and go to state 19
    TOKEN_INT             shift, and go to state 20
    TOKEN_MINUS           shift, and go to state 21
    TOKEN_LPAREN          shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_FALSE           shift, and go to state 24

    term    go to state 61
    call    go to state 28
    factor  go to state 29


State 46

   43 term: term TOKEN_MUL • factor

    TOKEN_ID              shift, and go to state 34
    TOKEN_STRING_LITERAL  shift, and go to state 19
    TOKEN_INT             shift, and go to state 20
    TOKEN_MINUS           shift, and go to state 21
    TOKEN_LPAREN          shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_FALSE           shift, and go to state 24

    factor  go to state 62


State 47

   44 term: term TOKEN_DIV • factor

    TOKEN_ID              shift, and go to state 34
    TOKEN_STRING_LITERAL  shift, and go to state 19
    TOKEN_INT             shift, and go to state 20
    TOKEN_MINUS           shift, and go to state 21
    TOKEN_LPAREN          shift, and go to state 22
    TOKEN_TRUE            shift, and go to state 23
    TOKEN_FALSE           shift, and go to state 24

    factor  go to state 63


State 48

   14 param_decl: TOKEN_ID TOKEN_DPOINTS • type

    TOKEN_VOID          shift, and go to state 8
    TOKEN_INT_TYPE      shift, and go to state 9
    TOKEN_BOOLEAN_TYPE  shift, and go to state 10
    TOKEN_STRING_TYPE   shift, and go to state 11

    type  go to state 64


State 49

    6 decl: TOKEN_ID TOKEN_DPOINTS TOKEN_FUNCTION type TOKEN_LPAREN param_list TOKEN_RPAREN • TOKEN_ASSIGN stmt_block

    TOKEN_ASSIGN  shift, and go to state 65


State 50

   13 param_list: param_list TOKEN_COMMA • param_decl

    TOKEN_ID  shift, and go to state 30

    param_decl  go to state 66


State 51

   33 expr: expr • TOKEN_PLUS term
   34     | expr • TOKEN_MINUS term
   37 cond: expr • TOKEN_EQ term
   38     | expr • TOKEN_NEQ term
   39     | expr • TOKEN_LT term
   40     | expr • TOKEN_GT term
   41     | expr • TOKEN_LEQ term
   42     | expr • TOKEN_GEQ term
   49 call_args: expr •

    TOKEN_PLUS   shift, and go to state 37
    TOKEN_MINUS  shift, and go to state 38
    TOKEN_EQ     shift, and go to state 40
    TOKEN_NEQ    shift, and go to state 41
    TOKEN_LT     shift, and go to state 42
    TOKEN_GT     shift, and go to state 43
    TOKEN_LEQ    shift, and go to state 44
    TOKEN_GEQ    shift, and go to state 45

    $default  reduce using rule 49 (call_args)


State 52

   47 call: TOKEN_ID TOKEN_LPAREN call_args • TOKEN_RPAREN
   50 call_args: call_args • TOKEN_COMMA expr

    TOKEN_RPAREN  shift, and go to state 67
    TOKEN_COMMA   shift, and go to state 68


State 53

   52 factor: TOKEN_LPAREN expr TOKEN_RPAREN •

    $default  reduce using rule 52 (factor)


State 54

   33 expr: expr TOKEN_PLUS term •
   43 term: term • TOKEN_MUL factor
   44     | term • TOKEN_DIV factor

    TOKEN_MUL  shift, and go to state 46
    TOKEN_DIV  shift, and go to state 47

    $default  reduce using rule 33 (expr)


State 55

   34 expr: expr TOKEN_MINUS term •
   43 term: term • TOKEN_MUL factor
   44     | term • TOKEN_DIV factor

    TOKEN_MUL  shift, and go to state 46
    TOKEN_DIV  shift, and go to state 47

    $default  reduce using rule 34 (expr)


State 56
